fix: hero section spacing

--- a/styles.css
+++ b/styles.css
@@ -282,7 +282,7 @@ nav.scrolled {
 
 .hero-text h1{
     animation-delay: 0.5s;
-    font-size: clamp(1.25rem, 6vw, 4.5rem);
+    font-size: clamp(1.1rem, 6vw, 4rem);
     margin: 0.1rem 0;
     letter-spacing: 4px;
     font-family: 'Josefin Sans';
@@ -358,7 +358,11 @@ nav.scrolled {
     overflow: visible;
     width: auto;
     animation: none;
-    font-size: 3rem;
+    font-size: clamp(1.1rem, 5vw, 3rem);
+  }
+
+  .hero-text p{
+    font-size: clamp(0.5rem, 2vw, 1rem);
   }
 
   .hero-section{
